[package]
name = "vsched2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vdso_helper = { git = "https://github.com/rosy233333/vdso_crate_template.git" }
# vdso_helper = { path = "../vdso_crate_template/vdso_helper" }
spin = { version = "0.10", default-features = false, features = [
    "spin_mutex",
    "rwlock",
] }
lazyinit = "0.2.2"
heapless = "0.9.2"

[build_dependencies]
vdso_helper = { git = "https://github.com/rosy233333/vdso_crate_template.git" }
# vdso_helper = { path = "../vdso_crate_template/vdso_helper" }
